--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "connect-flash": "^0.1.1",
@@ -9,6 +10,8 @@
     "handlebars": "^4.7.8",
     "mongoose": "^8.12.1",
     "mysql2": "^3.12.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.37.6"
   }
 }
